added new file css and mofified index.html

--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <title>Welcome</title>
+  <link href="reset/reset.css" rel="stylesheet" type="text/css" />
+  <title>Adrian Statescu: the official website</title>
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
   <style type="text/css">
+  body {background:#fff;font-family: Helvetica Neue, Arial, sans-serif; margin-left: 15px;}
+  h1 { font-size: 120px; }
+  p { margin-top: 20px; font-size: 30px; }
   </style>
 </head>
 <body>
-<div id="container">
-<center><div id="main">Adrian Statescu</div></center>
-</div>
+<h1>&#65;&#100;&#114;&#105;&#97;&#110;&#32;&#83;&#116;&#97;&#116;&#101;&#115;&#99;&#117;</h1>
+<p>&#116;&#119;&#105;&#116;&#116;&#101;&#114; @<a href="&#104;&#116;&#116;&#112;&#58;&#47;&#47;&#116;&#119;&#105;&#116;&#116;&#101;&#114;&#46;&#99;&#111;&#109;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;">&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;</a></p>
+<p>&#119;&#101;&#98;&#115;&#105;&#116;&#101;  <a href="&#104;&#116;&#116;&#112;&#58;&#47;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;&#46;&#114;&#111;">&#104;&#116;&#116;&#112;&#58;&#47;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;&#46;&#114;&#111;</a></p>
+<p>&#112;&#114;&#111;&#106;&#101;&#99;&#116;&#115; <a href="&#104;&#116;&#116;&#112;&#58;&#47;&#47;&#103;&#105;&#116;&#104;&#117;&#98;&#46;&#99;&#111;&#109;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;">&#104;&#116;&#116;&#112;&#58;&#47;&#47;&#103;&#105;&#116;&#104;&#117;&#98;&#46;&#99;&#111;&#109;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;</a></p>
+<p>&#102;&#111;&#114;&#103;&#101;  <a href="&#104;&#116;&#116;&#112;&#58;&#47;&#47;&#109;&#111;&#111;&#116;&#111;&#111;&#108;&#115;&#46;&#110;&#101;&#116;&#47;&#102;&#111;&#114;&#103;&#101;&#47;">&#104;&#116;&#116;&#112;&#58;&#47;&#47;&#109;&#111;&#111;&#116;&#111;&#111;&#108;&#115;&#46;&#110;&#101;&#116;&#47;&#102;&#111;&#114;&#103;&#101;&#47;</a></p>
 </body>
 </html>
