--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
  </p>
 
   
-<center><p><a href="https://www.chess.com/member/thinkphp"><img src="http://adrianstatescu.com/css/chesscom.png" /> <a href="https://lichess.org/@/thinkphp"><img src="http://adrianstatescu.com/css/lichess.png" height="200" width=200/></p></center>
+<center><p><a href="https://www.chess.com/member/thinkphp"><img src="https://images.chesscomfiles.com/uploads/v1/images_users/tiny_mce/SuperMember/phpLDm0ec.png" /> <a href="https://lichess.org/@/thinkphp"><img src="http://adrianstatescu.com/css/lichess.png" height="200" width=200/></p></center>
  
 
 
