--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
  </p>
 
   
-<center><p><a href="https://www.chess.com/member/thinkphp"><img src="https://images.chesscomfiles.com/uploads/v1/images_users/tiny_mce/SuperMember/phpLDm0ec.png" /> <a href="https://lichess.org/@/thinkphp"><img src="https://c7.uihere.com/files/963/623/714/lichess-%E2%80%A2-free-online-chess-portable-game-notation-internet-chess-server-chess-thumb.jpg"></p></center>
+<center><p><a href="https://www.chess.com/member/thinkphp"><img src="http://adrianstatescu.ch/css/chesscom.png" /> <a href="https://lichess.org/@/thinkphp"><img src="http://adrianstatescu.ch/css/lichess.png"></p></center>
  
 
 
