--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <h1><b style="color: #00b7ff">&#65;&#100;&#114;&#105;&#97;&#110;&#32;&#83;&#116;&#97;&#116;&#101;&#115;&#99;&#117;</b></h1>
-<p>&#84;&#119;&#105;&#116;&#116;&#101;&#114; @<a href="&#104;&#116;&#116;&#112;&#58;&#47;&#47;&#116;&#119;&#105;&#116;&#116;&#101;&#114;&#46;&#99;&#111;&#109;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;">&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;</a> Blog <a href="http://thinkphp.herokuapp.com/">http://thinkphp.herokuapp.com</a> My <a href="https://thinkphp.github.io/languages/livre.html">Book</a> | Andurance multisport<a href="https://www.strava.com/athletes/18263314">Hiking Running cycling swimming</a></p>
+<p>&#84;&#119;&#105;&#116;&#116;&#101;&#114; @<a href="&#104;&#116;&#116;&#112;&#58;&#47;&#47;&#116;&#119;&#105;&#116;&#116;&#101;&#114;&#46;&#99;&#111;&#109;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;">&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;</a> Blog <a href="http://thinkphp.herokuapp.com/">http://thinkphp.herokuapp.com</a> My <a href="https://thinkphp.github.io/languages/livre.html">Book</a> | Endurance <a href="https://www.strava.com/athletes/18263314">Hiking Running cycling swimming</a></p>
 <p>About <a href="http://adrianstatescu.ch/">http://adrianstatescu.ch</a></p>
 <p>Projects  <a href="http://138.68.99.104">http://thinkphp.ch</a></p>
 <p>GitHub <a href="&#104;&#116;&#116;&#112;&#58;&#47;&#47;&#103;&#105;&#116;&#104;&#117;&#98;&#46;&#99;&#111;&#109;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;">&#104;&#116;&#116;&#112;&#58;&#47;&#47;&#103;&#105;&#116;&#104;&#117;&#98;&#46;&#99;&#111;&#109;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;</a> Gist <a href="https://gist.github.com/thinkphp">gist.github.com/thinkphp</a></p>
