--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
  </p>
 
   
-<center><p><a href="https://www.chess.com/member/thinkphp"><img src="http://adrianstatescu.ch/css/chesscom.png" /> <a href="https://lichess.org/@/thinkphp"><img src="http://adrianstatescu.ch/css/lichess.png" height="300" width="300"></p></center>
+<center><p><a href="https://www.chess.com/member/thinkphp"><img src="http://adrianstatescu.ch/css/chesscom.png" /> </p></center>
  
 
 
