--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
   
 <p>Micro-Framework JS <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#103;&#105;&#116;&#104;&#117;&#98;&#46;&#99;&#111;&#109;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;&#47;&#99;&#117;&#98;&#97;&#46;&#106;&#115;">cuba.js</a> Cuba.js UI <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#103;&#105;&#116;&#104;&#117;&#98;&#46;&#99;&#111;&#109;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;&#47;&#99;&#117;&#105;">cui</a> Cuba.js AMD <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#103;&#105;&#116;&#104;&#117;&#98;&#46;&#99;&#111;&#109;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;&#47;&#99;&#117;&#105;&#50;">&#99;&#117;&#105;&#50;</a></p>
 <p>Lightweight JS library <a href="http://thinkphp.github.io/ujs/">&#117;&#106;&#115;</a> PHP MVC Framework <a href="https://github.com/thinkphp/plaut">Plaut</a></p>
-  
+
+<p>Sinatra <a href="#">app</a></p>
 <p>Ruby on Rails <a href="#">app</a></p>
 <p>Flask <a href="http://thinkphp.pythonanywhere.com/">app</a></p> 
 <p>Django <a href="http://adrianstatescu.pythonanywhere.com/">app</a></p> 
