--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 <img src="http://www.infoarena.ro/userwidget/thinkphp"/>   
  </p>
 
+ <p>Toys <a href="http://thinkphp.ch/apps/geoip/">GeoIP</a> <a href="http://thinkphp.ch/apps/">webster</a> <a href="http://thinkphp.ch/apps/lastfm/">last.fm</a> <a href="http://thinkphp.ch/apps/GooBing.js/">GooBing</a> <a href="http://thinkphp.ch/apps/weather">weather</a> <a href="http://thinkphp.ch/apps/getlatlon/">getlatlon</a> <a href="http://thinkphp.ch/apps/rss">RSS Reader</a> <a href="thinkphp.ch/apps">geodistance</a> <a href="http://thinkphp.ch/apps">makemap</a> <a href="http://thinkphp.ch/apps/lastfm">recent.tracks</a> <a href="http://thinkphp.ch/apps/geo/">content2map</a> <a href="http://thinkphp.github.io/pi/">Leibniz-PI</a> <a href="http://thinkphp.github.io/e/">Euler's Number</a> <a href="http://thinkphp.github.io/sqrt/">sqrt</a> <a href="https://thinkphp.github.io/pascal-triangle/">Pascal's Triangle</a> <a href="http://graphjs.appspot.com/">GraphJS</a> <a href="https://thinkphp.github.io/sin">sin</a> <a href="https://thinkphp.github.io/cos">cos</a> <a href="https://thinkphp.github.io/ln">ln</a> <a href="https://thinkphp.github.io/wikipedia-viewer/">Wikipedia Viewer</a> <a href="http://thinkphp.ch/apps">To Do List</a> </p>
   
 <center><p><a href="https://www.chess.com/member/thinkphp"><img src="http://adrianstatescu.ch/css/chesscom.png" /> </p></center>
  
