--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   
 <p>Artificial Intelligence <a href="https://github.com/thinkphp/lisp-training">Common LISP</a> <a href="#">Prolog</a> <a href="https://github.com/thinkphp/scheme-training">Scheme</a> <a href="#">Haskell</a> <a href="https://github.com/thinkphp/ocaml-training">OCaml</a></p>
 <p>Codesandbox <a href="https://codesandbox.io/u/thinkphp">https://codesandbox.io/u/thinkphp</a></p>  
-<p>StackBlitz <a href="https://stackblitz.com/@thinkphp"https://stackblitz.com/@thinkphp</a></p>  
+<p>StackBlitz <a href="https://stackblitz.com/@thinkphp">https://stackblitz.com/@thinkphp</a></p>  
 <p>
   
 <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16 3.84003L4.08321 8.08963L5.90081 23.8464L16 29.44L26.0992 23.8464L27.9168 8.08963L16 3.84003Z" fill="#DD0031"></path><path d="M16 3.84003V6.68163V6.66883V19.6352V29.44L26.0992 23.8464L27.9168 8.08963L16 3.84003Z" fill="#C3002F"></path><path d="M16 6.66882L8.5504 23.3728H11.328L12.8256 19.6352H19.1488L20.6464 23.3728H23.424L16 6.66882ZM18.176 17.3312H13.824L16 12.096L18.176 17.3312Z" fill="white"></path></svg>
