--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <p>Ideone.com <a href="https://ideone.com/thinkphp/dynamicprogramming ">Dynamic Programming</a>  <a href="https://ideone.com/thinkphp/divideetimpera">Divide et Conquer</a> <a href="https://ideone.com/thinkphp/backtracking">Backtracking</a> <a href="#">Greedy</a> <a href="https://ideone.com/thinkphp/graph">Graphs</a> <a href="#">Rec</a>  <a href="https://ideone.com/DjYl6g">a</a> <a href="https://ideone.com/AkdL7z">b</a></p>
 
-<p>Repl.it <a href="https://repl.it/@emilstates">a</a> <a href="#">b</a> <a href="#">c</a> <a href="#">d</a> <a href="#">e</a></p>
+<p>Repl.it <a href="https://repl.it/@thinkphp">a</a> <a href="#">b</a> <a href="#">c</a> <a href="#">d</a> <a href="#">e</a></p>
 
 
 <p>Micro-Framework JS <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#103;&#105;&#116;&#104;&#117;&#98;&#46;&#99;&#111;&#109;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;&#47;&#99;&#117;&#98;&#97;&#46;&#106;&#115;">cuba.js</a> Cuba.js UI <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#103;&#105;&#116;&#104;&#117;&#98;&#46;&#99;&#111;&#109;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;&#47;&#99;&#117;&#105;">cui</a> Cuba.js AMD <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#103;&#105;&#116;&#104;&#117;&#98;&#46;&#99;&#111;&#109;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;&#47;&#99;&#117;&#105;&#50;">&#99;&#117;&#105;&#50;</a></p>
