--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <p>Ruby on Rails <a href="#">app</a></p>
 <p>Flask <a href="http://thinkphp.pythonanywhere.com/">app</a></p>
 <p>Django <a href="http://adrianstatescu.pythonanywhere.com/">app</a></p>
-<p>PHP MVC Framework <a href="https://github.com/thinkphp/plaut">Plaut</a></p>
+<p>PHP MVC Framework <a href="https://github.com/thinkphp/plaut">Plaut</a> Composer <a href="https://packagist.org/users/statescua/packages/">packagist</a></p>
 
 <p>Docker Hub <a href="https://hub.docker.com/u/thinkpython">https://hub.docker.com/u/thinkpython</a> </p>
 
