--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 
 
-<p>Ideone.com <a href="https://ideone.com/thinkphp/dynamicprogramming ">Dynamic Programming</a>  <a href="https://ideone.com/thinkphp/divideetimpera">Divide et Conquer</a> <a href="https://ideone.com/thinkphp/backtracking">Backtracking</a> <a href="#">Greedy</a> <a href="https://ideone.com/thinkphp/graph">Graphs</a> <a href="#">Rec</a>  <a href="https://ideone.com/DjYl6g">a</a> <a href="https://ideone.com/AkdL7z">b</a></p>
+<p>Ideone.com <a href="https://ideone.com/thinkphp/dynamicprogramming ">Dynamic Programming</a>  <a href="https://ideone.com/thinkphp/divideetimpera">Divide et Conquer</a> <a href="https://ideone.com/thinkphp/backtracking">Backtracking</a> <a href="#">Greedy</a> <a href="https://ideone.com/thinkphp/graph">Graphs</a> <a href="https://github.com/thinkphp/recursion">Recursion</a>  <a href="https://ideone.com/DjYl6g">a</a> <a href="https://ideone.com/AkdL7z">b</a></p>
 
 <p>Repl.it <a href="https://repl.it/@thinkphp">a</a> <a href="#">b</a> <a href="#">c</a> <a href="#">d</a> <a href="#">e</a></p>
 
