--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <h1><b style="background-color: mediumseagreen; color: yellow">&#65;&#100;&#114;&#105;&#97;&#110;&#32;&#83;&#116;&#97;&#116;&#101;&#115;&#99;&#117;</b></h1>
-<p>&#84;&#119;&#105;&#116;&#116;&#101;&#114; @<a href="&#104;&#116;&#116;&#112;&#58;&#47;&#47;&#116;&#119;&#105;&#116;&#116;&#101;&#114;&#46;&#99;&#111;&#109;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;">&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;</a> Blog <a href="http://thinkphp.herokuapp.com/">http://thinkphp.herokuapp.com</a> My <a href="https://thinkphp.github.io/languages/livre.html">Book</a> Strava <a href="https://www.strava.com/athletes/18263314">Ultrarunner</a> Hiker <a href="http://adrianstatescu.pythonanywhere.com/">mountains</a></p>
+<p>&#84;&#119;&#105;&#116;&#116;&#101;&#114; @<a href="&#104;&#116;&#116;&#112;&#58;&#47;&#47;&#116;&#119;&#105;&#116;&#116;&#101;&#114;&#46;&#99;&#111;&#109;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;">&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;</a> Blog <a href="http://thinkphp.herokuapp.com/">http://thinkphp.herokuapp.com</a> My <a href="https://thinkphp.github.io/languages/livre.html">Book</a> </p>
 <p>About <a href="http://adrianstatescu.ch/">http://adrianstatescu.ch</a></p>
 <p>Projects  <a href="http://thinkphp.ch">http://thinkphp.ch</a></p>
 <p>GitHub <a href="&#104;&#116;&#116;&#112;&#58;&#47;&#47;&#103;&#105;&#116;&#104;&#117;&#98;&#46;&#99;&#111;&#109;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;">&#104;&#116;&#116;&#112;&#58;&#47;&#47;&#103;&#105;&#116;&#104;&#117;&#98;&#46;&#99;&#111;&#109;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;</a> Gist <a href="https://gist.github.com/thinkphp">gist.github.com/thinkphp</a></p>
@@ -72,7 +72,7 @@
  </p>
 
  <p>Toys <a href="http://thinkphp.ch/apps/geoip/">GeoIP</a> <a href="http://thinkphp.ch/apps/">webster</a> <a href="http://thinkphp.ch/apps/lastfm/">last.fm</a> <a href="http://thinkphp.ch/apps/GooBing.js/">GooBing</a> <a href="http://thinkphp.ch/apps/weather">weather</a> <a href="http://thinkphp.ch/apps/getlatlon/">getlatlon</a> <a href="http://thinkphp.ch/apps/rss">RSS Reader</a> <a href="thinkphp.ch/apps">geodistance</a> <a href="http://thinkphp.ch/apps">makemap</a> <a href="http://thinkphp.github.io/recent.lastfm.MooTools/">recent.tracks</a> <a href="http://thinkphp.ch/apps/geo/">content2map</a> <a href="http://thinkphp.github.io/pi/">Leibniz-PI</a> <a href="http://thinkphp.github.io/e/">Euler's Number</a> <a href="http://thinkphp.github.io/sqrt/">sqrt</a> <a href="https://thinkphp.github.io/pascal-triangle/">Pascal's Triangle</a> <a href="http://graphjs.appspot.com/">GraphJS</a> <a href="https://thinkphp.github.io/sin">sin</a> <a href="https://thinkphp.github.io/cos">cos</a> <a href="https://thinkphp.github.io/ln">ln</a> <a href="https://thinkphp.github.io/wikipedia-viewer/">Wikipedia Viewer</a> <a href="http://thinkphp.ch/apps/task2/app.php">To Do List</a> <a href="https://ideone.com/thinkphp/vectors">Array Data Structures</a> </p>
-
+<p> Strava <a href="https://www.strava.com/athletes/18263314">Ultrarunner</a> Hiker <a href="http://adrianstatescu.pythonanywhere.com/">mountains</a></p>
 <center><p><a href="https://www.chess.com/member/thinkphp"><img src="http://adrianstatescu.ch/css/chesscom.png" /> </p></center>
 
 
