--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <p> Strava <a href="https://www.strava.com/athletes/18263314">Ultrarunner</a> Hiker <a href="http://adrianstatescu.pythonanywhere.com/">mountains</a></p>
 <p>Math <a href="https://artofproblemsolving.com/community/user/thinkphp">https://artofproblemsolving.com/community/user/thinkphp</a></p> 
 
-<center><p><a href="https://www.chess.com/member/thinkphp"><img src="http://adrianstatescu.ch/css/chesscom.png" /> </p></center>
+<center><p><a href="https://www.chess.com/member/thinkphp"><img src="http://adrianstatescu.ch/css/chesscom.png" /> <a href="https://artofproblemsolving.com/community/user/thinkphp"><img src="https://avatar.artofproblemsolving.com/avatar_560045.png" /> </p></center>
 
 
 
