--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 </br> 
   
-<a href='https://www.topcoder.com/members/thinkphp'><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQQB4PTfpTIb7AQyBMEuXq_00C6G5sHwkv6V4k0CqRN3n-5q-Krc9Syneob__aeTHIbgQ&usqp=CAU"></a> 
+<a href='https://www.topcoder.com/members/thinkphp'><img src="https://cdn.iconscout.com/icon/free/png-256/free-topcoder-3629111-3030251.png"></a> 
   
 <p> <a href="https://codingcompetitions.withgoogle.com/"><img src="https://blog.outsider.ne.kr/attach/1/x1162521169.jpg.pagespeed.ic.VcBBnkE05o.jpg"></a>        
 
