--- a/index.html
+++ b/index.html
@@ -68,15 +68,12 @@
 <p><mark> Competitive Programming </mark>  <a href="https://www.pbinfo.ro/profil/thinkphp">pbinfo</a>  <a href="https://www.infoarena.ro/utilizator/thinkphp">infoarena</a>  <a href="https://cses.fi/problemset/user/166019/">cses</a>  <a href="https://csacademy.com/user/thinkphp">csacademy</a>  <a href="https://adventofcode.com">Advent of Code</a>  <a href="https://onlinejudge.org/index.php?option=com_onlinejudge&Itemid=8&page=show_authorstats&userid=1604718">UVa</a> <a href="https://leetcode.com/statescua/">LeetCode</a>  <a href="http://www.spoj.com/users/thinkphp/">spoj</a> <a href="http://codeforces.com/profile/thinkphp">codeforces</a>  <a href="http://acm.timus.ru/author.aspx?id=228328">timus</a> <a href="http://projecteuler.net/"> ProjectEuler </a>  <a href="https://www.topcoder.com/members/thinkphp">TopCoder</a>  <a href="https://atcoder.jp/users/thinkphp">atCoder</a>  <a href="http://poj.org/userstatus?user_id=thinkphp">poj</a>   <a href="https://oj.uz/profile/thinkphp">oj.uz</a>  <a href="https://open.kattis.com/users/thinkphp">kattis</a>  <a href="http://dmoj.ca/user/thinkphp">dmoj</a>  </p>
 
 </br>   
-<p> <a href="https://codingcompetitions.withgoogle.com/"><img src="https://blog.outsider.ne.kr/attach/1/x1162521169.jpg.pagespeed.ic.VcBBnkE05o.jpg"></a>        
-
-<a href="https://www.facebook.com/codingcompetitions/profile"><img src="https://miro.medium.com/max/605/1*4H9wF_zCFyYlDREHAD7j0g.png" width="200" height="100"></a> 
-  
-<br/> 
   
 <a href="http://practice.geeksforgeeks.org/user-profile.php?user=thinkphp">Geek4Geek</a>  <a href="https://www.codechef.com/users/statescua">codechef</a> <a href="https://www.hackerrank.com/statescua?hr_r=1">HackerRank</a>  <a href="https://www.hackerearth.com/@thinkphp">HackerEarth</a> 
   
-<a href="https://evaluator.hsin.hr/">coci</a>  <a href="https://train.usaco.org/">usaco</a>
+<a href="https://evaluator.hsin.hr/">coci</a>  <a href="https://train.usaco.org/">usaco</a> <a href="https://www.facebook.com/codingcompetitions/profile">Facebook HackerCup</a> 
+<a href="https://codingcompetitions.withgoogle.com/"> Google Code Jam </a> 
+  
 </p>
 
 
