--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   body {background:#fff;font-family: Helvetica Neue, Arial, sans-serif; margin-left: 15px;}
   h1 { font-size: 120px; }
   p { margin-top: 20px; font-size: 30px; color: #1e90ff}
-  a { color: mediumseagreen; }
+  a { color: DodgerBlue; }
   </style>
 </head>
 <body>
