--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style type="text/css">
   body {background:#fff;font-family: Helvetica Neue, Arial, sans-serif; margin-left: 15px;}
   h1 { font-size: 120px; }
-  p { margin-top: 20px; font-size: 30px; color: #1e90ff}
+  p { margin-top: 20px; font-size: 30px; color: #ccc}
   a { color: DodgerBlue; }
   </style>
 </head>
