--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <style type="text/css">
   body {background:#fff;font-family: Helvetica Neue, Arial, sans-serif; margin-left: 15px;}
   h1 { font-size: 120px; }
-  p { margin-top: 20px; font-size: 30px; color: #000}
-  a { color: DodgerBlue; }
+  p { margin-top: 20px; font-size: 30px; color: #000; font-family: system-ui;}
+  a { color: DodgerBlue; font-family: system-ui;}
   </style>
 </head>
 <body>
