--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <style type="text/css">
   body {background:#fff;font-family: Helvetica Neue, Arial, sans-serif; margin-left: 15px;}
   h1 { font-size: 120px; }
-  p { margin-top: 20px; font-size: 35px; color: #000; font-family: system-ui;}
+  p { margin-top: 20px; font-size: 31px; color: #000; font-family: system-ui;}
   a { color: DodgerBlue; font-family: system-ui;}
   </style>
 </head>
 <body>
 <h1><b style="background-color: mediumseagreen; color: yellow">&#65;&#100;&#114;&#105;&#97;&#110;&#32;&#83;&#116;&#97;&#116;&#101;&#115;&#99;&#117;</b></h1>
-<p style="#">C / C++ / Rust / Python3 / Ruby / Go / PHP / Java / Kotlin on Android / JavaScript / R for Machine Learning</p>
+<p style="#">C / C++ / Rust / <mark>Python3</mark> / Ruby / Go / PHP / Java / Kotlin on Android / JavaScript / R for Machine Learning</p>
 <p>&#84;&#119;&#105;&#116;&#116;&#101;&#114; @<a href="&#104;&#116;&#116;&#112;&#58;&#47;&#47;&#116;&#119;&#105;&#116;&#116;&#101;&#114;&#46;&#99;&#111;&#109;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;">&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;</a> Blog <a href="https://thinkphp.github.io/lectures/">https://thinkphp.github.io/lectures/</a> My <a href="https://thinkphp.github.io/languages/livre.html">Book</a> </p>
 <p>About <a href="http://adrianstatescu.ch/">http://adrianstatescu.ch</a></p>
 <p>Projects  <a href="http://thinkphp.ch">http://thinkphp.ch</a></p>
@@ -79,7 +79,7 @@
 <p> <mark>Toys</mark> <a href="http://thinkphp.ch/apps/geoip/">GeoIP</a> <a href="http://thinkphp.ch/apps/">webster</a> <a href="http://thinkphp.ch/apps/lastfm/">last.fm</a> <a href="http://thinkphp.ch/apps/GooBing.js/">GooBing</a> <a href="http://thinkphp.ch/apps/weather">weather</a> <a href="http://thinkphp.ch/apps/getlatlon/">getlatlon</a> <a href="http://thinkphp.ch/apps/rss">RSS Reader</a> <a href="thinkphp.ch/apps">geodistance</a> <a href="http://thinkphp.ch/apps">makemap</a> <a href="http://thinkphp.github.io/recent.lastfm.MooTools/">recent.tracks</a> <a href="http://thinkphp.ch/apps/geo/">content2map</a> <a href="http://thinkphp.github.io/pi/">Leibniz-PI</a> <a href="http://thinkphp.github.io/e/">Euler's Number</a> <a href="http://thinkphp.github.io/sqrt/">sqrt</a> <a href="https://thinkphp.github.io/pascal-triangle/">Pascal's Triangle</a> <a href="http://graphjs.appspot.com/">GraphJS</a> <a href="https://thinkphp.github.io/sin">sin</a> <a href="https://thinkphp.github.io/cos">cos</a> <a href="https://thinkphp.github.io/ln">ln</a> <a href="https://thinkphp.github.io/wikipedia-viewer/">Wikipedia Viewer</a> <a href="http://thinkphp.ch/apps/task2/app.php">To Do List</a> <a href="https://ideone.com/thinkphp/vectors">Array Data Structures</a> </p>
 
   
-<p> <mark>Besides Research (MISC)</mark> <a href="https://www.strava.com/athletes/18263314">Ultrarunner</a> <a href="http://adrianstatescu.pythonanywhere.com/">mountains</a> <a href="https://lichess.org/@/thinkphp"> Chess </a> </p>
+<p> <mark>Besides Research (MISC)</mark> <a href="https://www.strava.com/athletes/18263314">Ultrarunner</a> <a href="http://adrianstatescu.pythonanywhere.com/">Mountains</a> <a href="https://lichess.org/@/thinkphp"> Chess </a> </p>
   
 
 <center><p><a href="https://www.chess.com/member/thinkphp"><img src="http://adrianstatescu.ch/css/chesscom.png" /> <a href="https://artofproblemsolving.com/community/user/thinkphp"><img src="https://avatar.artofproblemsolving.com/avatar_560045.png" /> </p></center>
