--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <p><mark>Algorithm Design Techniques</mark> <a href="https://ideone.com/thinkphp/dynamicprogramming ">Dynamic Programming</a>  <a href="https://ideone.com/thinkphp/divideetimpera">Divide et Conquer</a> <a href="https://ideone.com/thinkphp/backtracking">Backtracking</a> <a href="https://ideone.com/thinkphp/greedy">Greedy</a> <a href="https://ideone.com/thinkphp/graph">Graphs</a> <a href="https://github.com/thinkphp/recursion">Recursion</a>  <a href="https://replit.com/@thinkphp/Recursion">a</a> </p>
 
 <p>Ideone.com <a href="https://ideone.com/DjYl6g">b</a> <a href="https://ideone.com/AkdL7z">c</a></p>
-<p>Repl.it <a href="https://repl.it/https://replit.com/@thinkphp">a</a> <a href="https://replit.com/@AdrianStatescu">b</a>
+<p>Repl.it <a href="https://replit.com/@thinkphp">a</a> <a href="https://replit.com/@AdrianStatescu">b</a>
 
 
 <p>Micro-Framework JS <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#103;&#105;&#116;&#104;&#117;&#98;&#46;&#99;&#111;&#109;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;&#47;&#99;&#117;&#98;&#97;&#46;&#106;&#115;">cuba.js</a> Cuba.js UI <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#103;&#105;&#116;&#104;&#117;&#98;&#46;&#99;&#111;&#109;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;&#47;&#99;&#117;&#105;">cui</a> Cuba.js AMD <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#103;&#105;&#116;&#104;&#117;&#98;&#46;&#99;&#111;&#109;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;&#47;&#99;&#117;&#105;&#50;">&#99;&#117;&#105;&#50;</a></p>
