--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   
 <p><mark>Mail</mark> <a href="https://mail.google.com/mail/u/0/?fs=1&tf=cm&source=mailto&to=+mergesortv@gmail.com">mergesortv@gmail.com</a> </p>
 
-<center><p><a href="https://www.chess.com/member/thinkphp"><img src="http://adrianstatescu.ch/css/chesscom.png" /> <a href="https://artofproblemsolving.com/community/user/thinkphp"><img src="https://avatar.artofproblemsolving.com/avatar_560045.png" /> </p></center>
+<center><p><a href="https://artofproblemsolving.com/community/user/thinkphp"><img src="https://avatar.artofproblemsolving.com/avatar_560045.png" /> </p></center>
 
 
 </body>
