--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <p><mark> Skills: </mark> C / C++ / Rust / <mark>Python3</mark> / Ruby / Go / PHP / Java / Kotlin on Android / JavaScript / R for Machine Learning</p>
 <p><mark> Jupyter Notebooks </mark> <a href="https://colab.research.google.com/drive/1-ZvCMRb9Zt2MGHDnkeeKNRaEzt2pJTh-#scrollTo=12GpfhMSfk7I"> Basic Algorithms</a> <a href="https://colab.research.google.com/drive/1uctK51D61db5ieIEduLRsRbKjB3Xx5Je"> Data Structures </a> <a href="https://colab.research.google.com/drive/1OUqtL2npVqvV6dVovXLNobUGVKAMwbw7"> Machine Learning </a>  <a href="https://colab.research.google.com/drive/1uFU25hhVSzP0xQZj3ItHRBgN9nPJ_0fY">Essential R</a>  <a href="https://colab.research.google.com/drive/11nBR69uIywEbz2AsBhjMJWHmpDwXkzSS"> Gems</a></p>
 <p>Lectures <a href="https://thinkphp.github.io/lectures/">https://thinkphp.github.io/lectures/</a> My <a href="https://thinkphp.github.io/languages/livre.html">Book</a> </p>
-<p>Projects  <a href="http://thinkphp.ch">http://thinkphp.ch</a></p>
+<p>Projects  <a href="http://thinkphp.ch">http://thinkphp.it</a></p>
 <p> <mark> GitHub </mark> <a href="&#104;&#116;&#116;&#112;&#58;&#47;&#47;&#103;&#105;&#116;&#104;&#117;&#98;&#46;&#99;&#111;&#109;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;">&#104;&#116;&#116;&#112;&#58;&#47;&#47;&#103;&#105;&#116;&#104;&#117;&#98;&#46;&#99;&#111;&#109;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;</a> Gist <a href="https://gist.github.com/thinkphp">gist.github.com/thinkphp</a></p>
 
   
