--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <p>Sinatra <a href="#">app</a> Ruby on Rails <a href="#">app</a> </p>
   
-<p>Flask <a href="http://thinkphp.pythonanywhere.com/">app</a> Django <a href="http://adrianstatescu.pythonanywhere.com/">app</a> </p>
+<p>Flask <a href="https://thinkphp.pythonanywhere.com/">Algo</a> <a href="https://myflasklist.pythonanywhere.com/">todo</a> Django <a href="http://adrianstatescu.pythonanywhere.com/">app</a> </p>
 
 <p>PHP MVC Framework <a href="https://github.com/thinkphp/plaut">Plaut</a> Composer <a href="https://packagist.org/users/statescua/packages/">packagist</a></p>
 
