--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <h1><b style="background-color: mediumseagreen; color: yellow">&#65;&#100;&#114;&#105;&#97;&#110;&#32;&#83;&#116;&#97;&#116;&#101;&#115;&#99;&#117;</b></h1>
-<p><mark> Skills: </mark> C / C++ / Rust / <mark>Python3</mark> / Ruby / Go / PHP / Java / Kotlin on Android / JavaScript / Node.js / TypeScript / <mark> React</mark> / Next.js / R</p>
+<p><mark> Skills: </mark> C / C++ / Rust / <mark>Python3</mark> / Ruby / Go / PHP / Java / Kotlin on Android / JavaScript / Node.js / TypeScript / <mark> React</mark> / Next.js / Nuxt / R</p>
 <p><mark> Jupyter Notebooks </mark> <a href="https://colab.research.google.com/drive/1-ZvCMRb9Zt2MGHDnkeeKNRaEzt2pJTh-#scrollTo=12GpfhMSfk7I"> Basic Algorithms</a> <a href="https://colab.research.google.com/drive/1uctK51D61db5ieIEduLRsRbKjB3Xx5Je"> Data Structures </a> <a href="https://colab.research.google.com/drive/1OUqtL2npVqvV6dVovXLNobUGVKAMwbw7"> Machine Learning </a>  <a href="https://colab.research.google.com/drive/1uFU25hhVSzP0xQZj3ItHRBgN9nPJ_0fY">Essential R</a>  <a href="https://colab.research.google.com/drive/11nBR69uIywEbz2AsBhjMJWHmpDwXkzSS"> Gems</a></p>
 <p>Lecture Notes <a href="https://thinkphp.github.io/lectures/">https://thinkphp.github.io/lectures/</a> My <a href="https://thinkphp.github.io/languages/livre.html">Book</a> </p>
 <p>Projects  <a href="http://thinkphp.it">http://thinkphp.it</a></p>
