--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
   
 <p>Artificial Intelligence <a href="https://github.com/thinkphp/lisp-training">Common LISP</a> <a href="#">Prolog</a> <a href="https://github.com/thinkphp/scheme-training">Scheme</a> <a href="https://github.com/thinkphp/haskell">Haskell</a> <a href="https://github.com/thinkphp/ocaml-training">OCaml</a></p>
 <p>&#77;&#111;&#111;&#84;&#111;&#111;&#108;&#115; <a href="&#104;&#116;&#116;&#112;&#58;&#47;&#47;&#109;&#111;&#111;&#116;&#111;&#111;&#108;&#115;&#46;&#110;&#101;&#116;&#47;&#102;&#111;&#114;&#103;&#101;&#47;&#112;&#114;&#111;&#102;&#105;&#108;&#101;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;">&#104;&#116;&#116;&#112;&#58;&#47;&#47;&#109;&#111;&#111;&#116;&#111;&#111;&#108;&#115;&#46;&#110;&#101;&#116;&#47;&#102;&#111;&#114;&#103;&#101;&#47;&#112;&#114;&#111;&#102;&#105;&#108;&#101;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;</a> &#106;&#81;&#117;&#101;&#114;&#121; <a href="&#104;&#116;&#116;&#112;&#58;&#47;&#47;&#112;&#108;&#117;&#103;&#105;&#110;&#115;&#46;&#106;&#113;&#117;&#101;&#114;&#121;&#46;&#99;&#111;&#109;&#47;&#108;&#97;&#115;&#116;&#102;&#109;&#47;">&#104;&#116;&#116;&#112;&#58;&#47;&#47;&#112;&#108;&#117;&#103;&#105;&#110;&#115;&#46;&#106;&#113;&#117;&#101;&#114;&#121;&#46;&#99;&#111;&#109;&#47;&#108;&#97;&#115;&#116;&#102;&#109;&#47;</a></p>
-<p> Node.js <a href="https://www.npmjs.com/~thinkphp">thinkphp</a> RubyGems <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#114;&#117;&#98;&#121;&#103;&#101;&#109;&#115;&#46;&#111;&#114;&#103;&#47;&#112;&#114;&#111;&#102;&#105;&#108;&#101;&#115;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;">thinkphp</a> PyPI <a href="https://pypi.org/user/thinkphp/">thinkphp</a></p>
+
+<p> 
+  
+Open Source Contributions: <a href="https://www.npmjs.com/~thinkphp">Node.js(npm)</a> <a href="https://pypi.org/user/thinkphp/">Python(PyPI)</a> <a href="https://rubygems.org/profiles/thinkphp">Ruby(RubyGems)</a> <a href="https://crates.io/users/thinkphp">Rust(crates.io)</a> 
+
+</p>  
+    
 <p>
 Vercel <a href="https://my-next-counter.vercel.app/">Counter</a> <a href="https://my-cafe-react-psi.vercel.app/">Next Cafe</a>  <a href="https://my-next-portofolio.vercel.app/">My Next Portofolio</a> 
 </p> 
@@ -45,9 +51,6 @@ Vercel <a href="https://my-next-counter.vercel.app/">Counter</a> <a href="https:
 <p>Backbone.js <a href="http://thinkphp.github.io/backbone-flickr/">1</a> KnockoutJS <a href="http://thinkphp.github.io/knockout-flickr/">1</a> <a href="http://thinkphp.github.io/knockout-flickr/search.html">2</a> Ember.js <a href="http://thinkphp.github.io/ember-todos/">1</a></p>
 
 <p><mark>Algorithm Design Techniques</mark> <a href="https://ideone.com/thinkphp/dynamicprogramming ">Dynamic Programming</a>  <a href="https://ideone.com/thinkphp/divideetimpera">Divide et Conquer</a> <a href="https://ideone.com/thinkphp/backtracking">Backtracking</a> <a href="https://ideone.com/thinkphp/greedy">Greedy</a> <a href="https://ideone.com/thinkphp/graph">Graphs</a> <a href="https://github.com/thinkphp/recursion">Recursion</a>  <a href="https://replit.com/@thinkphp/Recursion">a</a> </p>
-
-
-<p>Crates.io <a href="https://crates.io/users/thinkphp"> My Crates </a></p>
 
 
 <p>Micro-Framework JS <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#103;&#105;&#116;&#104;&#117;&#98;&#46;&#99;&#111;&#109;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;&#47;&#99;&#117;&#98;&#97;&#46;&#106;&#115;">cuba.js</a> Cuba.js UI <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#103;&#105;&#116;&#104;&#117;&#98;&#46;&#99;&#111;&#109;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;&#47;&#99;&#117;&#105;">cui</a> Cuba.js AMD <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#103;&#105;&#116;&#104;&#117;&#98;&#46;&#99;&#111;&#109;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;&#47;&#99;&#117;&#105;&#50;">&#99;&#117;&#105;&#50;</a></p>
