--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <p> 
   
-Open Source Contributions: <a href="https://www.npmjs.com/~thinkphp">Node.js(npm)</a> <a href="https://pypi.org/user/thinkphp/">Python(PyPI)</a> <a href="https://rubygems.org/profiles/thinkphp">Ruby(RubyGems)</a> <a href="https://crates.io/users/thinkphp">Rust(crates.io)</a> 
+Open Source Community: <a href="https://www.npmjs.com/~thinkphp">Node.js(npm)</a> <a href="https://pypi.org/user/thinkphp/">Python(PyPI)</a> <a href="https://rubygems.org/profiles/thinkphp">Ruby(RubyGems)</a> <a href="https://crates.io/users/thinkphp">Rust(crates.io)</a> 
 
 </p>  
     
