--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
   
 <p>Artificial Intelligence <a href="https://github.com/thinkphp/lisp-training">Common LISP</a> <a href="#">Prolog</a> <a href="https://github.com/thinkphp/scheme-training">Scheme</a> <a href="https://github.com/thinkphp/haskell">Haskell</a> <a href="https://github.com/thinkphp/ocaml-training">OCaml</a></p>
-<p>&#77;&#111;&#111;&#84;&#111;&#111;&#108;&#115; <a href="&#104;&#116;&#116;&#112;&#58;&#47;&#47;&#109;&#111;&#111;&#116;&#111;&#111;&#108;&#115;&#46;&#110;&#101;&#116;&#47;&#102;&#111;&#114;&#103;&#101;&#47;&#112;&#114;&#111;&#102;&#105;&#108;&#101;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;">&#104;&#116;&#116;&#112;&#58;&#47;&#47;&#109;&#111;&#111;&#116;&#111;&#111;&#108;&#115;&#46;&#110;&#101;&#116;&#47;&#102;&#111;&#114;&#103;&#101;&#47;&#112;&#114;&#111;&#102;&#105;&#108;&#101;&#47;&#116;&#104;&#105;&#110;&#107;&#112;&#104;&#112;</a> &#106;&#81;&#117;&#101;&#114;&#121; <a href="&#104;&#116;&#116;&#112;&#58;&#47;&#47;&#112;&#108;&#117;&#103;&#105;&#110;&#115;&#46;&#106;&#113;&#117;&#101;&#114;&#121;&#46;&#99;&#111;&#109;&#47;&#108;&#97;&#115;&#116;&#102;&#109;&#47;">&#104;&#116;&#116;&#112;&#58;&#47;&#47;&#112;&#108;&#117;&#103;&#105;&#110;&#115;&#46;&#106;&#113;&#117;&#101;&#114;&#121;&#46;&#99;&#111;&#109;&#47;&#108;&#97;&#115;&#116;&#102;&#109;&#47;</a></p>
-
+  
+  
 <p> 
   
-Open Source Community: <a href="https://www.npmjs.com/~thinkphp">Node.js(npm)</a> <a href="https://pypi.org/user/thinkphp/">Python(PyPI)</a> <a href="https://rubygems.org/profiles/thinkphp">Ruby(RubyGems)</a> <a href="https://crates.io/users/thinkphp">Rust(crates.io)</a> 
+Open Source Community: <a href="https://www.npmjs.com/~thinkphp">Node.js(npm)</a> <a href="https://pypi.org/user/thinkphp/">Python(PyPI)</a> <a href="https://rubygems.org/profiles/thinkphp">Ruby(RubyGems)</a> <a href="https://crates.io/users/thinkphp">Rust(crates.io)</a>  <a href="http://plugins.jquery.com/lastfm/">jQuery</a> <a href="http://mootools.net/forge/profile/thinkphp">Mootools</a>
 
 </p>  
     
